--- a/styles/theme/components/_layout.scss
+++ b/styles/theme/components/_layout.scss
@@ -48,6 +48,8 @@
     min-width: 100vw;
     margin-left: 15.625rem;
     padding: 0;
+    padding-right: calc(var(--bs-gutter-x) * 0.5);
+    padding-left: calc(var(--bs-gutter-x) * 0.5);
     -webkit-transition: margin 0.25s ease-out;
     -moz-transition: margin 0.25s ease-out;
     -o-transition: margin 0.25s ease-out;
